静态文件浏览器缓存问题

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=9e172921ba5fb24542f3",
+    "/css/app.css": "/css/app.css?id=c23d405908b37daecc70"
 }
